--- a/dj_cookie_cutter/.vscode/settings.json
+++ b/dj_cookie_cutter/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/manas/Documents/Work/GitHub/Repository/Unchained/dj_cookie_cutter/cutter-venv/bin/python3.8"
+    "python.pythonPath": "cutter-venv/bin/python"
 }
